[project]
name = "LeetCode"
version = "0.1.0"
description = "Leetcode problems/solutions management"
authors = [{ name = "Matthieu Basset", email = "matthieu.basset@proton.me" }]
dependencies = [
    "click>=8.3.0",
    "loguru>=0.7.3",
    "polars>=1.35.2",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "pytest>=9.0.1",
]
requires-python = ">=3.14"
readme = "README.md"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
cli = "scripts:cli"
problem = "scripts.add_problem:add_problem"
tests = "scripts.tests:run_tests"
tests-cpp = "scripts.tests:cpp_tests"
readme = "scripts.markdown_table:update_md"

[tool.pytest]
python_files = ["solution-*.py"]
python_functions = ["test_*"]
python_classes = ["There are no classes"]
